donation show form and basic name updating

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -13,6 +13,7 @@
 @import closet_hangers/index
 @import closet_hangers/petpage
 @import closet_lists/form
+@import donations/show
 @import neopets_pages/new
 @import neopets_users/form
 @import contributions/index
