edit featured outfits on donation page

--- a/app/assets/stylesheets/donations/_show.sass
+++ b/app/assets/stylesheets/donations/_show.sass
@@ -3,3 +3,24 @@ body.donations-show
     border: 3px solid $module-border-color
     display: block
     margin: 0 auto 1em
+
+  #edit-donation
+    ul
+      list-style: none
+
+    label
+      +inline-block
+      width: 16em
+
+    .name input[type=text]
+      width: 10em
+
+    .feature input[type=text]
+      width: 23em
+
+    .choose-outfit
+      font-size: 85%
+      margin-left: 1em
+
+      select
+        width: 10em
