--- a/app/views/donations/show.html.haml
+++ b/app/views/donations/show.html.haml
@@ -14,14 +14,15 @@
 
 %p
   %strong But enough about us. Let's talk about you!
-  When we brag about you on our donors list, what should we say?
+  When we brag about you on our #{link_to 'donors list', donate_path},
+  what should we say?
   (If you'd rather take care of this later, no worries!
   Check your email for a copy of this URL.)
 
 = form_for @donation, html: {id: 'edit-donation'} do |f|
   %ul
     %li.name
-      = f.label :donor_name, "Your name on the donors page"
+      = f.label :donor_name, "Your name on the donors list"
       = f.text_field :donor_name, placeholder: 'Anonymous'
 
     - @features.each do |feature|
