homepage outfit features

--- a/app/assets/stylesheets/static/_donate.sass
+++ b/app/assets/stylesheets/static/_donate.sass
@@ -73,6 +73,10 @@ body.static-donate
         text-align: center
         width: $outfit-banner-inner-width
 
+      img
+        height: $outfit-inner-height
+        width: $outfit-inner-width
+
   #fine-print
     font-size: 85%
     margin-top: 2em
