--- a/app/views/outfits/new.html.haml
+++ b/app/views/outfits/new.html.haml
@@ -1,6 +1,6 @@
 - hide_home_link
 
-= campaign_progress
+= campaign_progress @campaign
 
 %p#pet-not-found.alert= t 'pets.load.not_found'
 %p#neopia-error.alert= t 'pets.load.neopia_error'
