better campaign bar layout, on donate page and in general

--- a/app/assets/stylesheets/partials/_campaign-progress.sass
+++ b/app/assets/stylesheets/partials/_campaign-progress.sass
@@ -6,7 +6,8 @@
 
     border: 4px solid $module-border-color
     clear: both
-    margin-bottom: 1.5em
+    margin-bottom: 1em
+    margin-top: .5em
     position: relative
 
     .button
