--- a/app/assets/stylesheets/static/_donate.sass
+++ b/app/assets/stylesheets/static/_donate.sass
@@ -13,11 +13,7 @@ body.static-donate
   +campaign-progress
 
   #title
-    margin-bottom: .25em
-
-  #title
-    clear: left
-    float: left
+    display: none
 
   #donation-form
     +module
