--- a/app/views/donation_mailer/thank_you_email.html.erb
+++ b/app/views/donation_mailer/thank_you_email.html.erb
@@ -1,8 +1,15 @@
 <p>
   Hello, hello! I'm Matchu, loving father of Dress to Impress.
-  I started building the site on a whim one day, and never expected it to
-  really catch on—but here you are, proving that someone else out there loves
-  Dress to Impress as much as I do &lt;3 Thank you so much!
+</p>
+
+<p>
+  I just wanted to let you know how much your help means to me.
+  I built the site mostly for fun, and never really expected it to catch on,
+  but here we are, years later, and the site is entirely community-driven, from
+  our modeling data to our hosting costs.
+  Thanks so much for being a part of that community—the whole thing blows my
+  mind, and I feel honored to be a part of this big thing that is Dress to
+  Impress :)
 </p>
 
 <p>
@@ -23,8 +30,8 @@
 <p>
   Oh! And, if you ever have anything to say to me, <em>please</em> let me know
   at <%= mail_to 'matchu@openneo.net' %>. I'm looking forward to any and all
-  questions, comments, concerns, insults, treasure maps, love letters, or memes
-  you send my way :D
+  questions, comments, concerns, insults, treasure maps, love letters, memes,
+  or limericks you send my way :D
 </p>
 
 <p>
