--- a/app/views/static/donate.html.haml
+++ b/app/views/static/donate.html.haml
@@ -26,28 +26,29 @@
 
 #description
   :markdown
-    **Dress to Impress is cool!** We have loads of fancy features: we're
-    constantly adding models to our database, we help folks make NC trades, and
-    you can easily save your outfits and share them across the interwebs.
-    It's pretty sweet.
+    **Dress to Impress is cool!** We have loads of fancy features: y'all are
+    constantly adding models to our database, making NC trades, and saving your
+    outfits and sharing them across the interwebs.
+    It's pretty sweet, and we're super proud to have a community of users
+    consistently putting our resources to good use.
 
-    **But cool features cost money.** We're running on a cool
+    **But cool features cost us money—about $800 a year.** We're running on a
     [4GB Linode server][linode] for $40/mo, and y'all's fancy outfit thumbnails
     live on [Amazon Web Services][aws] for about $25/mo (it varies by usage),
-    so that leaves us at about $65/mo. Add in $10 for the domain name and our
-    Amazon costs being on the rise, and that rounds to an annual
-    budget of $800.
+    so that leaves us at about $65/mo. Add in $10 for the domain name and $10
+    room to grow (our Amazon usage, and therefore costs, are on the rise), and
+    that comes to an annual budget of $800.
 
     **So, we're here to ask for help.** If you have some spare change to send
     our way, we'll gladly accept
     <img src="http://images.neopets.com/neoboards/smilies/grin.gif" />
     Thanks for helping Dress to Impress stay online and running smoothly!
 
-    **And, as a thank-you gift, we'll feature your outfits here!** Eeyup, for
-    every $5 you send our way, we'll post one of your beautiful outfits right
-    here, and feature it on the homepage, too! Personally, I'm looking forward
-    to seeing all your lovely creations, and wishing I could make things
-    even [half as pretty][matts_bat]
+    **And, to show our undying gratitude, we'll feature your outfits right
+    here!** Eeyup, for every $5 you send our way, we'll post one of your
+    beautiful outfits right here on the donors list, and feature it on the
+    homepage, too! Personally, I'm looking forward to seeing all your lovely
+    creations, and wishing I could make things even [half as pretty][matts_bat]
     <img src="http://images.neopets.com/neoboards/smilies/tongue.gif" />
     (See the fine print at the bottom of the page for details.)
 
@@ -88,11 +89,11 @@
     <img src="http://images.neopets.com/neoboards/smilies/tongue.gif" />)
 
     Featuring your outfit is a thank-you gift that we like to give our donors;
-    it is *not* a purchased service. We offer no guarantee that we'll post your
+    it is *not* a purchased service. We make no guarantee that we'll post your
     outfit on any page for any particular amount of time, or even at all.
     (That said, we expect to publicly list our donors' outfits somewhere on the
-    site for as long as it lives, and in rotation on the homepage until some
-    other site event or feature needs the space.)
+    site for as long as the site lives, and in rotation on the homepage until
+    some other site event or feature needs the space.)
 
     We reserve the right to refuse to post any outfit for any reason, and we
     reserve the right to remove any previously posted outfit for any reason.
@@ -105,7 +106,8 @@
     (For example, changing your mind and requesting a refund *is* acting in
     good faith, and we'd love to help you out.
     Posting an obscene outfit then requesting a refund once we take it down is
-    *not* acting in good faith, and we don't want to encourage that behavior
+    *not* acting in good faith, and we don't want our refund policy to
+    encourage that behavior
     <img src="http://images.neopets.com/neoboards/smilies/tongue.gif" />
     We determine "good faith" at our sole discretion—not limited to those
     examples—but we're generally pretty understanding.)
