when there are no donors yet, draw less attention to that fact :P

--- a/app/assets/stylesheets/static/_donate.sass
+++ b/app/assets/stylesheets/static/_donate.sass
@@ -20,12 +20,13 @@ body.static-donate
 
     background:
       image: url(http://images.neopets.com/new_shopkeepers/t_993.gif)
-      position: ($container-width - 150px - 8px) -8px
+      position: ($container-width - 150px - 8px) -4px
       repeat: no-repeat
+    margin-top: 1em
     margin-bottom: 1.5em
-    padding-bottom: 24px
+    padding-bottom: 32px
     padding-left: 24px
-    padding-top: 24px
+    padding-top: 32px
 
     header, div
       +inline-block
