better fit longer names in donated outfit footer

--- a/app/assets/stylesheets/static/_donate.sass
+++ b/app/assets/stylesheets/static/_donate.sass
@@ -66,6 +66,7 @@ body.static-donate
       width: $outfit-inner-width
 
       header, footer
+        font-size: 85%
         padding: $outfit-banner-v-padding $outfit-banner-h-padding
         text-align: center
         width: $outfit-banner-inner-width
