thank you note, future donations explanation

--- a/app/views/static/donate.html.haml
+++ b/app/views/static/donate.html.haml
@@ -24,6 +24,22 @@
       = text_field_tag 'donation[amount]', '10.00'
     %button{:type => 'submit'} Donate now!
 
+#success-thanks
+  :markdown
+    **Oh, wow! We've raised enough money for our 2014 hosting costs in less
+    than a week! Thanks a ton!**
+
+    As it happens, we didn't have a fundraiser last year because I didn't have
+    the time or energy to ask for money properly—whoops. So, any further
+    donations will go toward last year's hosting costs that I paid out of
+    pocket, and will therefore help me have enough money to pay for college
+    &hearts;
+
+    And you'll still totally get featured here and on the homepage, too.
+    Thanks again for all your help! We're proud to be your Neopets fix during
+    the downtime
+    <img src="http://images.neopets.com/neoboards/smilies/grin.gif" />
+
 #description
   :markdown
     **Dress to Impress is cool!** We have loads of fancy features: y'all are
