--- a/app/assets/stylesheets/static/_donate.sass
+++ b/app/assets/stylesheets/static/_donate.sass
@@ -55,6 +55,14 @@ body.static-donate
     button
       +loud-awesome-button-color
 
+  #success-thanks
+    border: 1px dashed $module-border-color
+    margin-bottom: 1em
+    padding: 1em
+
+    p:last-child
+      margin-bottom: 0
+
   #outfits
     +outfits-list
     text-align: center
