swap the new outfit forms because downtime

--- a/app/assets/stylesheets/outfits/_new.sass
+++ b/app/assets/stylesheets/outfits/_new.sass
@@ -47,15 +47,14 @@ body.outfits-new
       left: 16px
       legend
         margin-left: -16px
-  #load-pet-to-wardrobe
+  #start-from-scratch
     font-size: 175%
     margin:
       bottom: 1em
-      top: 2em
-    input
+      top: 1.5em
+    select
       font-size: 67%
       padding: .5em
-      width: 10em
     button
       +loud-awesome-button
       font-size: 67%
