swap the homepage forms back in anticipation of Neopets.com uptime

--- a/app/assets/stylesheets/outfits/_new.sass
+++ b/app/assets/stylesheets/outfits/_new.sass
@@ -47,14 +47,15 @@ body.outfits-new
       left: 16px
       legend
         margin-left: -16px
-  #start-from-scratch
+  #load-pet-to-wardrobe
     font-size: 175%
     margin:
       bottom: 1em
       top: 1.5em
-    select
+    input
       font-size: 67%
       padding: .5em
+      width: 10em
     button
       +loud-awesome-button
       font-size: 67%
