toggle whether a donation campaign is advertised

--- a/app/views/layouts/items.html.haml
+++ b/app/views/layouts/items.html.haml
@@ -1,4 +1,4 @@
-- content_for :before_title, campaign_progress(@campaign)
+- content_for :before_title, advertise_campaign_progress(@campaign)
 - content_for :title_category do
   #{t 'infinite_closet'}: #{t '.title_tagline'}
 - content_for :before_flashes do
